## Process this file with automake to produce Makefile.in

# Include files to install
includedir = $(prefix)/include/annodex
include_HEADERS = \
	anx_list.h anx_params.h anx_core.h \
	annodex.h anx_constants.h anx_int64.h anx_types.h \
	anx_general.h anx_track.h anx_read.h anx_write.h \
	anx_import.h

EXTRA_DIST = anx_int64_w32.h
